Slight tweak to search popup appearance

--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <title>Gwern.net Search</title>
 <style>
 .search-results-placeholder {
-	font-family: sans-serif;
+	font-family: Arial, sans-serif;
 	opacity: 0.25;
 	text-align: center;
 	display: flex;
@@ -14,4 +14,4 @@
 </style>
 <script async src="https://cse.google.com/cse.js?cx=009114923999563836576:dv0a4ndtmly"></script>
 <div class="gcse-search"></div>
-<div class="search-results-placeholder"><p>Search results will appear here</p></div>
+<div class="search-results-placeholder"><p>[Search results will appear here]</p></div>
