Enable search pop-frame on mobile clients, and fix bugs

--- a/search.html
+++ b/search.html
@@ -11,6 +11,27 @@
 	font-size: 1.25em;
 	user-select: none;
 }
+div.gsc-results-wrapper-visible {
+	margin-top: 1.5em;
+}
+div.gcsc-more-maybe-branding-root {
+	text-align: center;
+	margin: 1em;
+}
+div.gcsc-find-more-on-google-branding {
+	display: none;
+}
+@media all and (max-width: 649px) {
+	.search-results-placeholder {
+		font-size: 1em;
+	}
+	button.gsc-search-button-v2 {
+		padding: 6px 8px;
+	}
+	div.gsc-control-cse {
+		padding: 1em 0.5em;
+	}
+}
 </style>
 <script async src="https://cse.google.com/cse.js?cx=009114923999563836576:dv0a4ndtmly"></script>
 <div class="gcse-search"></div>
