--- a/google-search.html
+++ b/google-search.html
@@ -51,7 +51,7 @@ body {
 }
 </style>
 <form action="https://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
-<input autocomplete="on" class="form-control search" name="q" placeholder="Search in gwern.net" required="required" type="text">
+<input autocomplete="on" class="form-control search" name="q" placeholder="Search in Gwern.net" required="required" type="text">
 <input name="sitesearch" type="hidden" value="gwern.net">
 <button class="button" type="submit">Search</button>
 </form>
