Fix some special popup bugs

--- a/google-search.html
+++ b/google-search.html
@@ -16,6 +16,7 @@ body {
 	appearance: none;
 	border: none;
 	background-color: #fff;
+	color: #000;
 	outline: 1px solid #ccc;
 	flex: 1 1 auto;
 	height: 2em;
@@ -58,6 +59,7 @@ body {
 }
 .searchform input.search {
 	background-color: #161616;
+	color: #f1f1f1;
 	outline: 1px solid #5c5c5c;
 }
 .searchform:focus-within input.search {
