--- a/google-search.html
+++ b/google-search.html
@@ -7,6 +7,26 @@ body {
 	margin: 0;
 	padding: 0.5em;
 	background-color: #fff;
+	font-family: sans-serif;
+	pointer-events: none;
+}
+#search-where-selector label,
+.searchform {
+	pointer-events: auto;
+}
+.search-where-form {
+	margin: 0;
+}
+#search-where-selector {
+	margin: 0 -1px 0.5em -1px;
+	border: 1px solid #ccc;
+	padding: 0.375em 0.25em 0.625em 0.25em;
+}
+#search-where-selector legend {
+	padding: 0 0.25em;
+}
+#search-where-selector label {
+	padding: 0.25em;
 }
 .searchform {
 	display: flex;
@@ -57,6 +77,10 @@ body {
 body {
 	background-color: #161616;
 }
+#search-where-selector {
+	color: #f1f1f1;
+	border: 1px solid #5c5c5c;
+}
 .searchform input.search {
 	background-color: #161616;
 	color: #f1f1f1;
@@ -71,6 +95,7 @@ body {
 .searchform button {
 	background-color: #404040;
 	outline: 1px solid #5c5c5c;
+	color: #f1f1f1;
 }
 .searchform:focus-within button {
 	outline: 2px solid #5c5c5c;
@@ -84,8 +109,16 @@ body {
 	outline: 2px solid #a6a6a6;
 }
 </style>
-<form action="https://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
-<input autocomplete="on" class="form-control search" name="q" placeholder="Search in Gwern.net" required="required" type="text">
-<input name="sitesearch" type="hidden" value="gwern.net">
-<button class="button" type="submit">Search</button>
-</form>
+<main>
+	<fieldset id="search-where-selector">
+		<legend>Search in:</legend>
+		<label for="search-all"><input type="radio" id="search-all" name="search-where" value="site:gwern.net" checked /> All</label>
+		<label for="search-essays"><input type="radio" id="search-essays" name="search-where" value="gwern.net -site:gwern.net/doc/" /> Essays only</label>
+		<label for="search-docs"><input type="radio" id="search-docs" name="search-where" value="site:gwern.net/doc/" /> Docs only</label>
+	</fieldset>
+	<form action="https://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
+		<input autocomplete="on" class="form-control search" placeholder="Search in Gwern.net" required="required" type="text">
+		<input class="query" name="q" type="hidden">
+		<button class="button" type="submit">Search</button>
+	</form>
+</main>
