Better error handling for id-based loading page

--- a/google-search.html
+++ b/google-search.html
@@ -9,6 +9,11 @@ body {
 	background-color: #fff;
 	font-family: sans-serif;
 	pointer-events: none;
+	display: flex;
+	align-items: center;
+}
+main {
+	flex: 1 0 auto;
 }
 #search-where-selector label,
 .searchform {
